style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

@media screen and (max-width: 800px) {
    .background {
        position:absolute;
        opacity: 0;
    }

    .logo {
        text-align: center;
    }
}

:root {
    --main-color: rgb(26, 28, 29);
    --secondary-color: #2d7a50;
}

body {
    display: flex;
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    height: 100vh;
    margin: 0;
    color: var(--main-color);
}

.background {
    background-image: url(https://cdn.discordapp.com/attachments/860015348895186994/1036202201233752104/1667120223871.png?ex=6534e400&is=65226f00&hm=044e609455832ea31ecbb8fac4b3c5b1f9b391efcb5252557d08cc44bf6fde1f&);
    background-repeat: no-repeat;
    background-size: cover;
    flex: 1;
    justify-content: center;
}

.logo {
    color: var(--secondary-color);
    font-size: 40px;
    font-weight: bold;
    margin: 0px 16px;
}

.content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 2;
}

.head {
    margin: 16px;
}

h2 {
    margin: 8px;
}

.form-container {
    display: flex;
    flex-direction: column;
    box-shadow: 3px 3px 10px #bbf;
    margin: 16px 0px;
    padding: 16px;
}

.field {
    display: flex;
}

.infield {
    display:flex;
    flex-direction: column;
    margin: 8px
}

.button-container {
    margin: 16px;
}

label {
    font-size: 16px;
    font-weight: 700;
}

input {
    width: 100%;
    height: 24px;
    font-size: 18px;
    border-radius: 4px;
    border: 2px solid var(--main-color);
}

input:invalid {
    border-color: #d84141;
}

input:valid {
    border-color: var(--secondary-color);
}

button {
    background-color: var(--secondary-color);
    border: none;
    border-radius: 6px;
    cursor: pointer;
    display: block;
    color: white;
    font-size: 18px;
    font-weight: bold;
    padding: 12px 24px;
    margin-bottom: 12px;
    box-shadow: 2px 2px 8px #ccc;
}

a {
    text-decoration: none;
    font-weight: 800;
    color: var(--secondary-color);
}

